# NBC_Clustering

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
data/: lecture_data.csv  test.csv  test2.csv  test3.csv  test4.csv  test5.csv  test6.csv  test7.csv  test8.csv  test_gower.csv  test_gower2.csv  test_gower_NA_lecture_67.csv  test_gower_NA_lecture_89.csv
evaluation_data/3D_Road_Network/: 3d_road_network.csv  link.txt
evaluation_data/Cervical_Cancer_Behavior_Risk/: cancer_risk.csv  link.txt
evaluation_data/German_Credit/: german_credit.csv  german_credit_missing.csv  link.txt
evaluation_data/lecture_examples/: lecture_data_num.csv
include/: metrics.h  output.h  rating.h
include/dataset/: Datapoint.h  Dataset.h  Parameter.h
include/exceptions/: MissingValueException.h
include/grouping/: GroupingPoint.h  GroupingSet.h  algorithms.h
results/numerical/: NBC-gower_no.csv_D3_R300_k3_KNN.csv  NBC-m_vdm_no.csv_D3_R300_k3_KNN.csv
results/results_gower/3D_Road_Network/: NBC-gower_3d_road_network.csv_D3_R300_k1_K+NN.csv  NBC-gower_3d_road_network.csv_D3_R300_k1_OUT.csv  NBC-gower_3d_road_network.csv_D3_R300_k1_STAT.csv  NBC-gower_3d_road_network.csv_D3_R300_k3_K+NN.csv  NBC-gower_3d_road_network.csv_D3_R300_k3_STAT.csv  NBC-gower_3d_road_network.csv_D3_R300_k5_K+NN.csv  NBC-gower_3d_road_network.csv_D3_R300_k5_OUT.csv  NBC-gower_3d_road_network.csv_D3_R300_k5_STAT.csv
results/results_gower/Cervical_Cancer_Behavior_Risk/: NBC-gower_cancer_risk.csv_D19_R72_k1_K+NN.csv  NBC-gower_cancer_risk.csv_D19_R72_k1_OUT.csv  NBC-gower_cancer_risk.csv_D19_R72_k1_STAT.csv  NBC-gower_cancer_risk.csv_D19_R72_k3_K+NN.csv  NBC-gower_cancer_risk.csv_D19_R72_k3_OUT.csv  NBC-gower_cancer_risk.csv_D19_R72_k3_STAT.csv  NBC-gower_cancer_risk.csv_D19_R72_k5_K+NN.csv  NBC-gower_cancer_risk.csv_D19_R72_k5_OUT.csv  NBC-gower_cancer_risk.csv_D19_R72_k5_STAT.csv
results/results_gower/German_Credit/: NBC-gower_german_credit.csv_D20_R100_k1_K+NN.csv  NBC-gower_german_credit.csv_D20_R100_k1_OUT.csv  NBC-gower_german_credit.csv_D20_R100_k1_STAT.csv  NBC-gower_german_credit.csv_D20_R100_k3_K+NN.csv  NBC-gower_german_credit.csv_D20_R100_k3_OUT.csv  (+7 more)
src/dataset/: Datapoint.cpp  Dataset.cpp  Parameter.cpp
src/exceptions/: MissingValueException.cpp
src/grouping/: GroupingPoint.cpp  GroupingSet.cpp  algorithms.cpp
src/metrics/: gower.cpp  manhattanVdm.cpp
src/output/: output.cpp
src/rating/: rating.cpp
tests/: CMakeLists.txt
tests/dataset/: Datapoint.cpp  Dataset.cpp  Parameter.cpp
tests/grouping/: GroupingPoint.cpp  GroupingSet.cpp  algorithms.cpp
tests/metrics/: gower.cpp  manhattanVdm.cpp
tests/output/: output.cpp
tests/rating/: rating.cpp
(+80 files in other folders)
